# dstack

./: .copier-answers.yml  .editorconfig  .gitignore  .yamllint  AGENTS.md  CHANGELOG.md  LICENSE  README.md  _typos.toml  cog.toml  copier.yml  hk.pkl  mise.toml  pyproject.toml  skills.sh.json
.config/: rumdl.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  external-validation.yml  validate.yml
docs/: book.toml
docs/src/: SUMMARY.md  index.md  planned-features.md
docs/src/architecture/: index.md
docs/src/assets/css/: center_images.css
docs/src/development/: feature-lifecycle.md  index.md  tooling.md
docs/src/features/: index.md
docs/src/features/010-purposeful-project-scaffold/: design.md  index.md
docs/src/features/020-universal-project-tooling/: design.md  index.md
docs/src/features/030-language-quality-profiles/: design.md  index.md
docs/src/features/040-github-validation-and-docs-deployment/: design.md  index.md
docs/src/features/050-monorepo-tooling-layout/: design.md
docs/src/features/_template/: design.md  index.md
docs/src/features/github-validation-and-docs-deployment/: design.md  index.md
docs/src/features/hk-policy-simplification/: design.md  index.md
docs/src/features/language-quality-profiles/: design.md  index.md
docs/src/features/migration-safety-and-clarity/: design.md  index.md
docs/src/features/monorepo-tooling-layout/: design.md  index.md
docs/src/features/purposeful-project-scaffold/: design.md  index.md
docs/src/features/universal-project-tooling/: design.md  index.md
docs/src/introduction/: documentation-conventions.md  project-overview.md
docs/src/operations/: index.md
docs/src/reference/: index.md  tooling.md
scripts/: check-docs.py  enable-docs-deployment.py  set-skill-version.py  setup-tooling.py
skills/: README.md
skills/audit-project/: SKILL.md
skills/close-feature/: SKILL.md
skills/dstack-core/: SKILL.md
skills/dstack-core/references/: TRUST-AND-AUTHORITY.md
skills/dstack-core/scripts/: resolve-feature.py
skills/gh-pr-review/: SKILL.md
skills/gh-pr-review/scripts/: fetch_comments.py  review_state.py  wait_for_review.sh
skills/implement-feature/: SKILL.md
skills/migrate-workflow/: SKILL.md
skills/migrate-workflow/references/: MIGRATION.md
skills/migrate-workflow/scripts/: adopt-template.py  migrate-legacy-workflow.py
skills/plan-features/: SKILL.md
skills/setup-project/: SKILL.md  copier.yml
skills/setup-project/scripts/: layout_contract.py  setup-project.py
skills/setup-project/template/: .gitignore.jinja  AGENTS.md.jinja  [% if include_readme %]README.md[% endif %].jinja  [% if project_mode == 'new' %]MIGRATION.md[% endif %].jinja  [% if project_mode == 'new' and include_readme %]README.md[% endif %].jinja  [[ _copier_conf.answers_file ]].jinja  contextlint.config.json  hk.pkl.jinja  mise.toml.jinja
skills/setup-project/template/.beads/formulas/: dstack-feature.formula.toml  feature-lifecycle.formula.toml
skills/setup-project/template/.config/: cog-changelog.tera  rumdl.toml
skills/setup-project/template/.github/workflows/: docs.yml.jinja  validate.yml
skills/setup-project/template/docs/: book.toml.jinja
skills/setup-project/template/docs/src/: SUMMARY.md.jinja  [% if project_mode == 'new' %]planned-features.md[% endif %].jinja  index.md.jinja  planned-features.md.jinja
skills/setup-project/template/docs/src/architecture/: index.md.jinja
skills/setup-project/template/docs/src/development/: [% if project_mode == 'new' %]feature-lifecycle.md[% endif %].jinja  [% if project_mode == 'new' %]index.md[% endif %].jinja  feature-lifecycle.md.jinja  tooling.md.jinja
skills/setup-project/template/docs/src/features/: [% if project_mode == 'new' %]index.md[% endif %].jinja  index.md.jinja
skills/setup-project/template/docs/src/features/_template/: design.md  index.md
skills/setup-project/template/docs/src/introduction/: [% if project_mode == 'new' %]project-overview.md[% endif %].jinja  documentation-conventions.md.jinja  project-overview.md.jinja
skills/setup-project/template/docs/src/operations/: github-pages.md.jinja  index.md.jinja
skills/setup-project/template/docs/src/reference/: [% if repository_layout == 'monorepo' %]repository-layout.md[% endif %].jinja  index.md.jinja  tooling.md.jinja
skills/setup-project/template/scripts/: bootstrap.py  check-docs.py  migrate-legacy-workflow.py  setup-tooling.py
skills/start-feature/: SKILL.md
skills/update-project/: SKILL.md
skills/update-project/scripts/: layout_contract.py  update-project.py
tests/: __init__.py  conftest.py  support.py  test_f040_deployment.py  test_f040_enablement.py  test_f040_validation.py  test_github_deployment.py  test_github_enablement.py  test_github_validation.py  test_migrate_legacy_workflow.py  test_repository.py
