[project]
name = "dstack-workflow"
version = "0.0.0"
description = "Documentation-first, Beads-backed workflow skills and Copier template"
requires-python = ">=3.13"
dependencies = [
  "python-semantic-release>=10.6.1",
]

[dependency-groups]
test = [
  "PyYAML>=6.0,<7",
  "copier>=9.16,<10",
  "pytest>=8.4,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
]
markers = [
  "external: invokes network-backed external tooling such as the Skills CLI",
  "integration: exercises Copier, Git, or workflow scripts end to end",
]
testpaths = ["tests"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
force-exclude = true
target-version = "py313"

[tool.ruff.lint]
select = [
  # flake8-builtins
  "A",
  # flake8-unused-arguments
  "ARG",
  # flake8-async
  "ASYNC",
  # flake8-bugbear,
  "B",
  # flake8-comprehensions
  # 825"C4",
  # pydocstyle
  # "D",
  # pycodestyle Errors
  "E",
  # flake8-errmsg
  "EM",
  # Pyflakes
  "F",
  # FastAPI
  "FAST",
  # flake8-boolean-trap
  # "FBT",
  # refurb
  "FURB",
  # flake8-logging-format
  "G",
  # iSort
  "I",
  # flake8-logging
  "LOG",
  # pep8-naming
  # "N",
  # flake8-pie
  "PIE",
  # Pylint
  # "PL",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-return
  "RET",
  # Ruff-specific rules
  "RUF",
  # flake8-banit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # tryceratops
  # "TRY",
  # PyUpgrade
  "UP",
  # pycodestyle Warnings
  "W",
]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "S101",
  "S108",
  "S311",
  "S312",
  "S321",
  "S605",
  "ARG001"
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/support.py" = ["S603"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-third-party = []
lines-after-imports = 2
order-by-type = false
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder"
]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
  "skills/audit-project/SKILL.md:version",
  "skills/close-feature/SKILL.md:version",
  "skills/dstack-core/SKILL.md:version",
  "skills/gh-pr-review/SKILL.md:version",
  "skills/implement-feature/SKILL.md:version",
  "skills/migrate-workflow/SKILL.md:version",
  "skills/plan-features/SKILL.md:version",
  "skills/setup-project/SKILL.md:version",
  "skills/start-feature/SKILL.md:version",
  "skills/update-project/SKILL.md:version"
]
build_command = """
git add uv.lock
"""
commit_message = "Release v{version}"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
no_git_verify = false
tag_format = "v{version}"
add_partial_tags = false
vcs_release = false

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"
template_dir = "templates"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "refactor",
  "test"
]
allowed_tags = [
  "feat",
  "fix",
  "perf",
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "refactor",
  "test"
]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "Robert DeRose <RobertDeRose@users.noreply.github.com>"

[tool.uv]
package = false
fork-strategy = "fewest"
python-preference = "system"
default-groups = ["test"]
