[project]
name = "dstack-workflow"
version = "0.4.0"
description = "Documentation-first, Beads-backed workflow skills and Copier template"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
test = [
  "PyYAML>=6.0,<7",
  "copier>=9.16,<10",
  "pytest>=8.4,<10",
  "pytest-xdist>=3.8,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "-n=4",
  "--dist=loadgroup",
]
markers = [
  "external: invokes network-backed external tooling such as the Skills CLI",
  "integration: exercises Copier, Git, or workflow scripts end to end",
]
testpaths = ["tests"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 120
force-exclude = true
target-version = "py313"

[tool.ruff.lint]
select = [
  # flake8-builtins
  "A",
  # flake8-unused-arguments
  "ARG",
  # flake8-async
  "ASYNC",
  # flake8-bugbear,
  "B",
  # flake8-comprehensions
  # 825"C4",
  # pydocstyle
  # "D",
  # pycodestyle Errors
  "E",
  # flake8-errmsg
  "EM",
  # Pyflakes
  "F",
  # FastAPI
  "FAST",
  # flake8-boolean-trap
  # "FBT",
  # refurb
  "FURB",
  # flake8-logging-format
  "G",
  # iSort
  "I",
  # flake8-logging
  "LOG",
  # pep8-naming
  # "N",
  # flake8-pie
  "PIE",
  # Pylint
  # "PL",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-return
  "RET",
  # Ruff-specific rules
  "RUF",
  # flake8-banit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # tryceratops
  # "TRY",
  # PyUpgrade
  "UP",
  # pycodestyle Warnings
  "W",
]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "S101",
  "S108",
  "S311",
  "S312",
  "S321",
  "S605",
  "ARG001"
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/support.py" = ["S603"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-third-party = []
lines-after-imports = 2
order-by-type = false
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder"
]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.uv]
package = false
fork-strategy = "fewest"
python-preference = "system"
default-groups = ["test"]
